# api

./: .gitignore  Makefile  README.md
.github/workflows/: main.yml  tests.yml
Documentation/ERD/: api.md
backend/: .gitignore  Dockerfile  Makefile  pyproject.toml
backend/lib/api/fastapi/rest/v1/health/: liveness.py
backend/lib/api/rest/v1/chatgpt4/: __init__.py  create.py
backend/lib/api/rest/v1/chatgpt4/schemes/: __init__.py  answer.py  promt.py
backend/lib/api/rest/v1/dalle/: __init__.py  create.py
backend/lib/api/rest/v1/dalle/schemes/: __init__.py  dalle.py
backend/lib/api/rest/v1/gigachat/: __init__.py  create_art.py
backend/lib/api/rest/v1/gigachat/schemes/: __init__.py  gigachat_art.py
backend/lib/api/rest/v1/health/: __init__.py  create.py  liveness.py  read_detail.py
backend/lib/api/rest/v1/health/schemes/: __init__.py  promt.py
backend/lib/api/rest/v1/joke/: __init__.py  create.py  image.py  list.py
backend/lib/api/rest/v1/joke/schemes/: __init__.py  joke.py
backend/lib/api/rest/v1/promt/: __init__.py  create.py  read_detail.py
backend/lib/api/rest/v1/schemes/: __init__.py  paginator.py
backend/lib/app/fastapi/: __init__.py  app.py  errors.py  settings.py
backend/lib/chatgpt/services/: __init__.py  chatgpt_servece.py
backend/lib/dalle/: config.py
backend/lib/dalle/schemes/: __init__.py  images.py
backend/lib/dalle/serveces/: __init__.py  dalle_servece.py
backend/lib/gigachat/: config.py
backend/lib/gigachat/clients/: __init__.py  art.py  auth.py
backend/lib/gigachat/clients/schemes/: art.py
backend/lib/gigachat/schemes/: __init__.py  art.py
backend/lib/gigachat/services/: __init__.py  art_service.py
backend/lib/gigachat/utils/: __init__.py  read_responses.py
backend/lib/joke/models/: __init__.py  joke.py
backend/lib/joke/repositories/: __init__.py
backend/lib/joke/repositories/postgres/: __init__.py  models.py  repository.py
backend/lib/joke/sevices/: __init__.py  joke.py
backend/lib/utils/: messages.py
backend/lib/utils/fastapi/: __init__.py
backend/lib/utils/fastapi/types/: __init__.py  handler.py  middleware.py
backend/lib/utils/sqlalchemy/: __init__.py  base.py  columns.py  types.py
backend/migrations/: alembic.ini  env.py  script.py.mako
backend/migrations/versions/: 2024-04-06-14-47-11_811af5c33b69_init.py  2024-04-06-15-47-27_fb36a3b950de_test_field.py  2024-04-06-16-14-33_b1fb2bee026d_dell_test_field.py
backend/tests/: conftest.py
backend/tests/functional/: conftest.py
backend/tests/functional/src/health/: test_test.py
backend/tests/functional/utils/: types.py
docker/: Makefile
docker/compose/: .env.dev  docker-compose.dev.yml  docker-compose.yml
docker/postgres/master/: Dockerfile  postgresql.conf
docker/postgres/master/init_scripts/: 01_create_test_db.sh
